fix: SRVPUW-1076 survey number randomly not showing at top left (#403)
* fix: SRVPUW-1076 survey number randomly not showing at top left

* Fix color change

--- a/web/src/components/Header/HeaderToggle.scss
+++ b/web/src/components/Header/HeaderToggle.scss
@@ -1,3 +1,5 @@
+@use "@linzjs/lui/dist/scss/Foundation/Variables/ColorVars.scss" as colours;
+
 .HeaderToggle {
   &__dropdownIcon {
     // needed to override specificity in lui
@@ -10,4 +12,8 @@
 
 .HeaderToggle__button {
   white-space: nowrap;
+}
+
+.HeaderToggle__text {
+  color: colours.$charcoal;
 }
